--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -88,3 +88,7 @@ html.dark {
 .hide-scrollbar {
   scrollbar-width: none; /* Firefox */
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
